--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,34 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+body {
+  font-family: "Raleway", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  line-height: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  min-height: 90vh;
 }
 
-.App-link {
-  color: #61dafb;
+.about {
+  margin: 1%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.about_info {
+  grid-area: info;
+}
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .card {
   height: 300px;
-  /* border: 3px red solid; */
   max-width: 400px;
   display: flex;
   flex-direction: column;
@@ -38,11 +36,41 @@
   margin: 5%;
   line-height: 15px;
   border-radius: 1%;
+  position: relative;
+  background-size: contain !important;
+  background-position: center center !important;
 }
-
-.cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+.card_overlay {
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.card_overlay_animation {
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100%;
+  -webkit-animation-name: showpicture;
+          animation-name: showpicture;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+.card_error {
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  align-items: center;
+}
+.card_image {
+  -o-object-fit: contain;
+     object-fit: contain;
+  z-index: -2;
 }
 
 .pageNum {
@@ -50,11 +78,29 @@
   padding: 5px;
 }
 
-@keyframes App-logo-spin {
+.transparent {
+  display: none;
+}
+
+.paused {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+
+@-webkit-keyframes showpicture {
   from {
-    transform: rotate(0deg);
+    background-color: white;
   }
   to {
-    transform: rotate(360deg);
+    background-color: rgba(255, 255, 0, 0);
   }
 }
+
+@keyframes showpicture {
+  from {
+    background-color: white;
+  }
+  to {
+    background-color: rgba(255, 255, 0, 0);
+  }
+}/*# sourceMappingURL=App.css.map */
